--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "react-dom": "16.13.1",
     "react-draft-wysiwyg": "^1.14.4",
     "react-google-maps": "^9.4.5",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.0.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
     "react-native-calendars": "^1.300.0",
     "react-native-dev-menu": "^4.0.2",
     "react-native-extended-stylesheet": "^0.12.0",
@@ -88,8 +88,8 @@
     "@types/googlemaps": "^3.39.8",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
-    "@typescript-eslint/eslint-plugin": "^3.10.1",
-    "@typescript-eslint/parser": "^3.10.1",
+    "@typescript-eslint/eslint-plugin": "^4.6.0",
+    "@typescript-eslint/parser": "^4.6.0",
     "aws-sdk": "^2.704.0",
     "babel-plugin-dynamic-import-node": "^2.3.3",
     "babel-plugin-istanbul": "^6.0.0",
@@ -99,13 +99,13 @@
     "dynamic-cdn-webpack-plugin": "^5.0.0",
     "eslint": "^7.3.1",
     "eslint-plugin-react": "^7.20.0",
-    "expo-cli": "^3.27.12",
+    "expo-cli": "^3.28.2",
     "module-to-cdn": "^3.1.5",
     "nyc": "^15.1.0",
     "start-server-and-test": "^1.11.0",
-    "typescript": "~3.9.2",
+    "typescript": "^4.0.5",
     "webpack-bundle-analyzer": "^3.6.1",
-    "webpack-cli": "^3.3.12",
+    "webpack-cli": "^4.1.0",
     "webpack-merge": "^5.1.2"
   }
 }
