--- a/package.json
+++ b/package.json
@@ -30,6 +30,11 @@
     "@react-navigation/stack": "^5.6.2",
     "@react-navigation/web": "^1.0.0-alpha.9",
     "@sentry/react-native": "^1.7.2",
+    "@types/draft-js": "^0.10.44",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-native-calendars": "^1.20.10",
+    "@types/react-places-autocomplete": "^7.2.6",
+    "@types/uuid": "^8.3.0",
     "@zoomus/websdk": "^1.7.8",
     "asset": "^0.4.13",
     "aws-amplify": "^3.0.24",
@@ -87,6 +92,7 @@
     "@sheerun/mutationobserver-shim": "^0.3.3",
     "@types/googlemaps": "^3.39.8",
     "@types/react": "~16.9.35",
+    "@types/react-draft-wysiwyg": "^1.13.0",
     "@types/react-native": "~0.63.2",
     "@typescript-eslint/eslint-plugin": "^4.6.0",
     "@typescript-eslint/parser": "^4.6.0",
