--- a/amplify/backend/function/jcUpdateMainUserGroup/src/package.json
+++ b/amplify/backend/function/jcUpdateMainUserGroup/src/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "license": "Apache-2.0",
   "dependencies": {
-    "aws-amplify": "^3.0.23",
+    "aws-amplify": "3.3.10-unstable.3",
+    "aws-sdk": "^2.831.0",
     "axios": "^0.19.2",
     "graphql": "^15.3.0",
     "graphql-tag": "^2.11.0",
